--- a/udemy/reactLifeCycle/life/package.json
+++ b/udemy/reactLifeCycle/life/package.json
@@ -7,6 +7,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-facebook-login": "^4.1.1",
+    "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2"
   },
